Custom Scrollbar + Fix movement while chatting

--- a/src/client/css/main.css
+++ b/src/client/css/main.css
@@ -242,7 +242,6 @@ canvas {
     height: 45vh;
     bottom: 2rem;
     left: 2rem;
-	pointer-events: none;
 	padding: 1.5rem;
 }
 
@@ -252,7 +251,7 @@ canvas {
     list-style: none;
     box-sizing: border-box;
 	height: 37vh;
-	overflow-wrap: normal;
+	overflow-wrap: break-word;
 	overflow-y: scroll;
 }
 
@@ -345,6 +344,28 @@ canvas {
   }
 }
 
-/* ****************
- * *  Ingame Menu *
- * **************** */
+
+/* **************
+ * *  SCROLLBAR *
+ * ************** */
+::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+	border-radius: 10px;
+}
+
+::-webkit-scrollbar {
+	width: 10px;
+	background-color: #F5F5F5;
+}
+
+::-webkit-scrollbar-thumb {
+	border-radius: 10px;
+	background-image: -webkit-gradient(linear,
+									   left bottom,
+									   left top,
+									   color-stop(0.44, rgba(58, 45, 241, 0.6)),
+									   color-stop(0.72, rgba(60, 26, 214, 0.6)),
+									   color-stop(0.86, rgba(26, 0, 172, 0.6)));
+}
